updated mqtt-client version

--- a/config/crd/bases/orca.paermini.com_scenariotemplates.yaml
+++ b/config/crd/bases/orca.paermini.com_scenariotemplates.yaml
@@ -72,6 +72,8 @@ spec:
                         - clientCount
                         type: object
                       type: array
+                    clientImageId:
+                      type: string
                     connectionLimitPerSecond:
                       type: integer
                     enableTls:
@@ -88,6 +90,7 @@ spec:
                       type: integer
                   required:
                   - clientConfigs
+                  - clientImageId
                   - connectionLimitPerSecond
                   - enableTls
                   - hostName
