--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -4,5 +4,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 images:
 - name: controller
-  newName: oneedgeorca.azurecr.io/orca-scenario-template
+  newName: paerminiacrplayground.azurecr.io/orca-scenario-template
   newTag: v0.0.1
